dbDeployment.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: sqlserver
  name: sqlserver
spec:
  containers:
  - image: mcr.microsoft.com/mssql/server:2019-GA-ubuntu-16.04
    name: sqlserver
    ports:
    - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-svc
spec:
  selector:
    app: sqlserver
  ports:
    - protocol: TCP
      port: 1433
