deployment1.yml
apiVersion: v1
kind: Service
metadata:
  name: doom-travel-deployment
spec:
  selector:
    matchLabels:
      app: backend-pod
  template:
    metadata:
      labels:
        app: backend-pod
    spec:
      containers:
      - name: backend-container
        image: bdocker971/backend:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 44328
  ports:
  - protocol: TCP
    port: 44327
    targetPort: http
